--- a/JavaScript_The_Good_Parts/doc/5.md
+++ b/JavaScript_The_Good_Parts/doc/5.md
@@ -8,11 +8,12 @@
 继承和方法中返回this，可以形成链式调用。
 
 构造函数相当于类，但是有一些很怪异的行为：
-1. 没有私有，所有的塑性都是公共的。
+1. 没有私有属性，所有的属性都是公共的。
 2. 没有使用父类的方法。
 
 如果没有用 new 操作符 构造函数中的this 指向global 变量。
-所以构造函数的命名应该用首字母大写。也可以用其他的方法替代。
+所以构造函数的命名应该用首字母大写。也可以用其他的方法替代new。
+
 ## 对象符号
 用对象作为函数的参数来代替一长串的不易读的参数。
 对象可以和JSON 一起使用
@@ -29,5 +30,5 @@
 4. 返回新的变量
 
 
-##　Ｐarts
+## Parts
 可以用一个函数给对象添加事件处理特性。
